<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- application name -->
    <string name="app_name">微型公社</string>
    <!-- network return failed -->
    <string name="network_failed">失败原因</string>
    <!-- circlemenu widget -->
    <string name="circleMenu_back">返回</string>
    <string name="circleMenu_pageName"></string>
    <string name="circleitem1_1">广场</string>
    <string name="circleitem1_2">群组</string>
    <string name="circleitem1_3">Hot</string>
    <string name="circleitem1_4">我</string>
    <string name="circleitem2_1">我的名片</string>
    <string name="circleitem2_2">扫一扫</string>
    <string name="circleitem2_3">我的Hot</string>
    <string name="circleitem2_4">返回</string>
    <string name="circleitem2_5">消息列表</string>
    <string name="circleitem2_6">密友分组</string>
    <string name="circlemenu_page_circles">密友圈</string>
    <string name="circlemenu_page_group">群组</string>
    <string name="circlemenu_page_square">广场</string>
    <!-- alert widget -->
    <string name="alert_dialog_confirm">确定</string>
    <string name="alert_dialog_cancel">取消</string>
    <!-- alert message -->
    <string name="alert_text_phonenotnull">手机号不能为空</string>
    <string name="alert_text_passnotnull">密码不能为空</string>
    <string name="alert_text_passlength">密码长度需大于六位</string>
    <string name="alert_text_codenotnull">验证码不能为空</string>
    <string name="alert_text_nointernet">没有网络连接</string>
    <string name="alert_text_phoneformaterror">手机号码格式错误</string>
    <string name="alert_text_nettimeout">网络连接超时</string>
    <string name="alert_text_neterror">网络错误</string>
    <!-- common textview -->
    <string name="text_sendto">我们已将短信发送到</string>
    <string name="text_picture">[图片]</string>
    <string name="text_voice">[语音]</string>
    <string name="text_search">精确查找</string>
    <string name="text_verify">对方启用了朋友验证</string>
    <!-- panel text -->
    <string name="panel_passlogin">登录</string>
    <string name="panel_codelogin">验证码登录</string>
    <string name="panel_enterphone">输入手机号</string>
    <string name="panel_entercode">输入验证码</string>
    <string name="panel_setpass">设置密码</string>
    <!-- hint text -->
    <string name="hint_enterphone">请输入手机号</string>
    <string name="hint_enterpass">请输入密码</string>
    <string name="hint_entercode">请输入验证码</string>
    <string name="hint_verify">请输入验证消息</string>
    <!-- button text -->
    <string name="button_login">登    录</string>
    <string name="button_openregister">没有账号/注册</string>
    <string name="button_opencodelogin">验证码登录</string>
    <string name="button_sendcode">发送验证码</string>
    <string name="button_next">下 一 步</string>
    <string name="button_resend">重新发送</string>
    <string name="button_up">上一组</string>
    <string name="button_down">下一组</string>
    <string name="button_newfriend">新的朋友</string>
    <string name="button_moreMessage">点击查看更多</string>
    <string name="button_newcircle">新建分组</string>
    <string name="button_findmorefriend">找到更多密友</string>
    <string name="button_search">查  找</string>
    <string name="button_scanbusinesscard">扫描名片</string>
    <string name="button_send">发送</string>
    <!-- temp -->
    <string name="tv_modifyuserinfo">修改个人信息</string>
    <string name="tv_modifychangepwd">修改密码</string>
    <string name="tv_newpwd">新密码</string>
    <string name="tv_initialpwd">原密码</string>
    <string name="tv_confirmpwd">确认密码</string>
    <string name="tv_head">头像</string>
    <string name="tv_nickname">名字</string>
    <string name="tv_sex">性别</string>
    <string name="tv_phone">手机</string>
    <string name="tv_mainbusiness">主要业务</string>
    <string name="tv_mainbusinesscount">0/240</string>
    <string name="tv_mainbusinessrandom">随机生成</string>
    <string name="tv_save">保存</string>
    <string name="tv_cancel">取消</string>
    <string name="tv_picture">相册</string>
    <string name="tv_camera">拍照</string>
    <string name="title_activity_post">PostActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_send_voice">SendVoiceActivity</string>
    <string name="title_activity_pic_and_voice_detail">PicAndVoiceDetailActivity</string>
    <string name="title_activity_release_option">ReleaseOptionActivity</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新</string>
    <string name="not_updated_yet">暂未更新过</string>
    <string name="updated_at">上次更新于%1$s前</string>
    <string name="updated_just_now">刚刚更新</string>
    <string name="time_error">时间有问题</string>
    <string name="title_activity_details">DetailsActivity</string>

</resources>