<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="172dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/card_background"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        tools:ignore="UselessParent" >

        <TextView
            android:id="@+id/panel_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="10dp"
            android:text="@string/panel_setpass"
            android:textColor="#fff"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="40sp"
            android:layout_height="40sp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="2dp" android:paddingBottom="12dp"
            android:paddingLeft="16dp"
            android:paddingRight="8dp"
            android:paddingTop="12dp"
            android:src="@drawable/card_back" />

        <ImageView
            android:id="@+id/line"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_alignLeft="@+id/panel_name"
            android:layout_below="@+id/panel_name"
            android:layout_marginTop="8dp"
            android:background="#9fff"
            tools:ignore="ContentDescription" />

        <EditText
            android:id="@+id/register_pass"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignLeft="@+id/line"
            android:layout_alignRight="@+id/line"
            android:layout_below="@+id/line"
            android:layout_marginTop="20dp"
            android:background="#0999"
            android:ems="10"
            android:hint="@string/hint_enterpass"
            android:inputType="textPassword"
            android:textColor="#fff"
            android:textColorHint="#eee" >

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/button_next"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignLeft="@+id/register_pass"
            android:layout_alignRight="@+id/register_pass"
            android:layout_below="@+id/register_pass"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_background"
            android:text="@string/button_next"
            android:textColor="#fff"
            android:textSize="19sp" />
    </RelativeLayout>

</RelativeLayout>