<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/card_background_normal"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/panel_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:text="附近好友"
                    android:textColor="#fff"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/panel_right_button"
                    android:layout_width="40sp"
                    android:layout_height="30sp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginRight="2dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="8dp"
                    android:src="@drawable/card_back"
                    android:visibility="visible" />
            </RelativeLayout>

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="#9fff" />

            <com.lejoying.wxgs.activity.view.ScrollContainer
                android:id="@+id/viewContainer"
                android:layout_width="match_parent"
                android:layout_height="220dp" >
            </com.lejoying.wxgs.activity.view.ScrollContainer>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/rl_regpanel_pass"
            android:layout_width="fill_parent"
            android:layout_height="172dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/card_background_normal"
            android:padding="10dp" >

            <TextView
                android:id="@+id/panel_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:text="@string/text_search"
                android:textColor="#fff"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/line"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_alignLeft="@+id/panel_name"
                android:layout_below="@+id/panel_name"
                android:layout_marginTop="8dp"
                android:background="#9fff" />

            <EditText
                android:id="@+id/et_phone"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignLeft="@+id/line"
                android:layout_alignRight="@+id/line"
                android:layout_below="@+id/line"
                android:layout_marginTop="20dp"
                android:background="#0999"
                android:ems="10"
                android:hint="@string/hint_enterphone"
                android:inputType="number"
                android:textColor="#fff"
                android:textColorHint="#ddd" >

                <requestFocus />
            </EditText>

            <Button
                android:id="@+id/btn_search"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignLeft="@+id/et_phone"
                android:layout_alignRight="@+id/et_phone"
                android:layout_below="@+id/et_phone"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_background"
                android:text="@string/button_search"
                android:textColor="#fff"
                android:textSize="19sp" />
        </RelativeLayout>

        <Button
            android:id="@+id/scanBusinessCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/card_background"
            android:clickable="true"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="扫描名片"
            android:textColor="#fff"
            android:textSize="19sp" >
        </Button>
    </LinearLayout>

</ScrollView>